--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -246,4 +246,11 @@
     <string name="system_locale_summary">При изключено състояние приложението използва настройката, съответстваща на езика, зададен за приложението.</string>
     <string name="raised">задействана</string>
     <string name="scheduled">планирана</string>
-<string name="no_calendar_app">Не е намерено приложение за календар</string><string name="combine_notifications">Комбинирайте същите уведомления за време</string><string name="combine_notifications_summary">Ако е зададено, известията с един и същи час се обединяват в едно известие</string></resources>
+    <string name="no_calendar_app">Не е намерено приложение за календар</string>
+    <string name="combine_notifications">Комбинирайте същите уведомления за време</string>
+    <string name="combine_notifications_summary">Ако е зададено, известията с един и същи час се обединяват в едно известие</string>
+    <string name="battery_optimization_warning_title">Оптимизацията на батерията е активирана</string>
+    <string name="battery_optimization_warning_summary">Ако имате проблеми с пропуснати известия, моля, деактивирайте оптимизацията на батерията за това приложение в настройките за известия.</string>
+    <string name="ignore_battery_optimization">Игнориране на оптимизацията на батерията</string>
+    <string name="dismiss">Отхвърляне</string>
+</resources>
