--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -256,4 +256,11 @@
     <string name="system_locale_summary">Jeśli wyłączone, aplikacja korzysta z ustawienia odpowiadającego językowi ustawionemu dla aplikacji.</string>
     <string name="raised">Uruchomiono</string>
     <string name="scheduled">Zaplanowano</string>
-<string name="no_calendar_app">Nie znaleziono aplikacji kalendarza</string><string name="combine_notifications">Łączenie powiadomień w tym samym czasie</string><string name="combine_notifications_summary">Jeśli jest ustawiona, powiadomienia o tym samym czasie są łączone w jedno powiadomienie</string></resources>
+    <string name="no_calendar_app">Nie znaleziono aplikacji kalendarza</string>
+    <string name="combine_notifications">Łączenie powiadomień w tym samym czasie</string>
+    <string name="combine_notifications_summary">Jeśli jest ustawiona, powiadomienia o tym samym czasie są łączone w jedno powiadomienie</string>
+    <string name="battery_optimization_warning_title">Optymalizacja baterii jest włączona</string>
+    <string name="battery_optimization_warning_summary">Jeśli masz problemy z nieotrzymanymi powiadomieniami, wyłącz optymalizację baterii dla tej aplikacji w ustawieniach powiadomień.</string>
+    <string name="ignore_battery_optimization">Ignoruj optymalizację baterii</string>
+    <string name="dismiss">Odrzuć</string>
+</resources>
