--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -249,4 +249,8 @@
     <string name="no_calendar_app">Keine Kalender-App gefunden</string>
     <string name="combine_notifications">Gleichzeitige Benachrichtigungen zusammenfassen</string>
     <string name="combine_notifications_summary">Wenn diese Option aktiviert ist, werden Benachrichtigungen mit derselben Uhrzeit zu einer einzigen Benachrichtigung zusammengefasst</string>
+    <string name="battery_optimization_warning_title">Batterieoptimierung ist aktiviert</string>
+    <string name="battery_optimization_warning_summary">Wenn Sie Probleme mit verpassten Benachrichtigungen haben, deaktivieren Sie bitte die Batterieoptimierung für diese App in den Benachrichtigungseinstellungen.</string>
+    <string name="ignore_battery_optimization">Batterieoptimierung ignorieren</string>
+    <string name="dismiss">Verwerfen</string>
 </resources>
