--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -246,4 +246,11 @@
     <string name="system_locale_summary">Όταν είναι απενεργοποιημένη, η εφαρμογή χρησιμοποιεί τη ρύθμιση που αντιστοιχεί στη γλώσσα που έχει οριστεί για την εφαρμογή.</string>
     <string name="raised">Ενεργοποιήθηκε</string>
     <string name="scheduled">Προγραμματισμένη</string>
-<string name="no_calendar_app">Δεν βρέθηκε εφαρμογή ημερολογίου</string><string name="combine_notifications">Συνδυάστε την ίδια στιγμή κοινοποιήσεις</string><string name="combine_notifications_summary">Εάν έχει οριστεί, οι ειδοποιήσεις με την ίδια ώρα συνδυάζονται σε μια ενιαία ειδοποίηση</string></resources>
+    <string name="no_calendar_app">Δεν βρέθηκε εφαρμογή ημερολογίου</string>
+    <string name="combine_notifications">Συνδυάστε την ίδια στιγμή κοινοποιήσεις</string>
+    <string name="combine_notifications_summary">Εάν έχει οριστεί, οι ειδοποιήσεις με την ίδια ώρα συνδυάζονται σε μια ενιαία ειδοποίηση</string>
+    <string name="battery_optimization_warning_title">Η βελτιστοποίηση της μπαταρίας είναι ενεργοποιημένη</string>
+    <string name="battery_optimization_warning_summary">Εάν αντιμετωπίζετε προβλήματα με τις αναπάντητες ειδοποιήσεις, απενεργοποιήστε τη βελτιστοποίηση της μπαταρίας για αυτήν την εφαρμογή στις ρυθμίσεις ειδοποιήσεων.</string>
+    <string name="ignore_battery_optimization">Παράβλεψη βελτιστοποίησης μπαταρίας</string>
+    <string name="dismiss">Απόρριψη</string>
+</resources>
