--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -251,4 +251,11 @@
     <string name="system_locale_summary">Si se desactiva, la aplicación utiliza la configuración que coincide con el idioma establecido para la aplicación.</string>
     <string name="raised">Activada</string>
     <string name="scheduled">Programada</string>
-<string name="no_calendar_app">No se ha encontrado ninguna aplicación de calendario</string><string name="combine_notifications">Combinar notificaciones simultáneas</string><string name="combine_notifications_summary">Si se establece, las notificaciones con la misma hora se combinan en una sola notificación</string></resources>
+    <string name="no_calendar_app">No se ha encontrado ninguna aplicación de calendario</string>
+    <string name="combine_notifications">Combinar notificaciones simultáneas</string>
+    <string name="combine_notifications_summary">Si se establece, las notificaciones con la misma hora se combinan en una sola notificación</string>
+    <string name="battery_optimization_warning_title">La optimización de la batería está activada</string>
+    <string name="battery_optimization_warning_summary">Si tiene problemas con las notificaciones perdidas, desactive la optimización de la batería para esta aplicación en la configuración de notificaciones.</string>
+    <string name="ignore_battery_optimization">Ignorar la optimización de la batería</string>
+    <string name="dismiss">Descartar</string>
+</resources>
