--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -254,4 +254,8 @@
     <string name="no_calendar_app">Aucune application de calendrier trouvée</string>
     <string name="combine_notifications">Combiner les notifications simultanées</string>
     <string name="combine_notifications_summary">Si cette option est activée, les notifications tombant en même temps sont combinées en une seule notification</string>
+    <string name="battery_optimization_warning_title">L\'optimisation de la batterie est activée</string>
+    <string name="battery_optimization_warning_summary">Si vous rencontrez des problèmes avec des notifications manquées, veuillez désactiver l\'optimisation de la batterie pour cette application dans les paramètres de notification.</string>
+    <string name="ignore_battery_optimization">Ignorer l\'optimisation de la batterie</string>
+    <string name="dismiss">Rejeter</string>
 </resources>
