--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -251,4 +251,11 @@
     <string name="system_locale_summary">In caso di disattivazione, l\'applicazione utilizza l\'impostazione corrispondente alla lingua impostata per l\'applicazione.</string>
     <string name="raised">Attivato</string>
     <string name="scheduled">Pianificato</string>
-<string name="no_calendar_app">Nessuna applicazione calendario trovata</string><string name="combine_notifications">Combinare le notifiche nello stesso momento</string><string name="combine_notifications_summary">Se impostata, le notifiche con la stessa ora vengono combinate in un&amp;apos;unica notifica</string></resources>
+    <string name="no_calendar_app">Nessuna applicazione calendario trovata</string>
+    <string name="combine_notifications">Combinare le notifiche nello stesso momento</string>
+    <string name="combine_notifications_summary">Se impostata, le notifiche con la stessa ora vengono combinate in un&amp;apos;unica notifica</string>
+    <string name="battery_optimization_warning_title">L\'ottimizzazione della batteria è attivata</string>
+    <string name="battery_optimization_warning_summary">Se riscontri problemi con le notifiche perse, disabilita l\'ottimizzazione della batteria per questa app nelle impostazioni di notifica.</string>
+    <string name="ignore_battery_optimization">Ignora l\'ottimizzazione della batteria</string>
+    <string name="dismiss">Ignora</string>
+</resources>
