--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -253,4 +253,11 @@
     <string name="system_locale_summary">В выключенном состоянии приложение использует настройки, соответствующие языку, установленному для данного приложения.</string>
     <string name="raised">Сработало</string>
     <string name="scheduled">Запланировано</string>
-<string name="no_calendar_app">Приложение календаря не найдено</string><string name="combine_notifications">Объедините уведомления в одно время</string><string name="combine_notifications_summary">Если установлено, уведомления с одинаковым временем будут объединены в одно уведомление</string></resources>
+    <string name="no_calendar_app">Приложение календаря не найдено</string>
+    <string name="combine_notifications">Объедините уведомления в одно время</string>
+    <string name="combine_notifications_summary">Если установлено, уведомления с одинаковым временем будут объединены в одно уведомление</string>
+    <string name="battery_optimization_warning_title">Оптимизация батареи включена</string>
+    <string name="battery_optimization_warning_summary">Если у вас возникли проблемы с пропущенными уведомлениями, пожалуйста, отключите оптимизацию батареи для этого приложения в настройках уведомлений.</string>
+    <string name="ignore_battery_optimization">Игнорировать оптимизацию батареи</string>
+    <string name="dismiss">Отклонить</string>
+</resources>
