--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -249,4 +249,8 @@
     <string name="no_calendar_app">கேலெண்டர் செயலி எதுவும் இல்லை</string>
     <string name="combine_notifications">அதே நேர அறிவிப்புகளை இணை</string>
     <string name="combine_notifications_summary">அமைத்தால், ஒரே நேரத்தைக் கொண்ட அறிவிப்புகள் ஒரே அறிவிப்பாக இணைக்கப்படும்</string>
+    <string name="battery_optimization_warning_title">பேட்டரி உகப்பாக்கம் இயக்கப்பட்டது</string>
+    <string name="battery_optimization_warning_summary">தவறவிட்ட அறிவிப்புகளில் சிக்கல்கள் ஏற்பட்டால், அறிவிப்பு அமைப்புகளில் இந்த செயலிக்கான பேட்டரி மேம்படுத்தலை முடக்கவும்.</string>
+    <string name="ignore_battery_optimization">பேட்டரி உகப்பாக்கத்தைப் புறக்கணிக்கவும்</string>
+    <string name="dismiss">புறக்கணி</string>
 </resources>
