--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -241,4 +241,11 @@
     <string name="system_locale_summary">如果关闭，应用程序将使用与为应用程序设置的语言相匹配的设置。</string>
     <string name="raised">已触发</string>
     <string name="scheduled">已排定</string>
-<string name="no_calendar_app">未找到日历应用程序</string><string name="combine_notifications">合并同一时间的通知</string><string name="combine_notifications_summary">如果设置，时间相同的通知将合并为一个通知</string></resources>
+    <string name="no_calendar_app">未找到日历应用程序</string>
+    <string name="combine_notifications">合并同一时间的通知</string>
+    <string name="combine_notifications_summary">如果设置，时间相同的通知将合并为一个通知</string>
+    <string name="battery_optimization_warning_title">电池优化已启用</string>
+    <string name="battery_optimization_warning_summary">如果您遇到通知丢失的问题，请在通知设置中禁用此应用程序的电池优化。</string>
+    <string name="ignore_battery_optimization">忽略电池优化</string>
+    <string name="dismiss">忽略</string>
+</resources>
