--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -244,4 +244,8 @@
     <string name="no_calendar_app">找不到日曆應用程式</string>
     <string name="combine_notifications">合併相同時間的通知</string>
     <string name="combine_notifications_summary">如果設定，相同時間的通知將合併為單一通知</string>
+    <string name="battery_optimization_warning_title">電池優化已啟用</string>
+    <string name="battery_optimization_warning_summary">如果您遇到通知遺失的問題，請在通知設定中停用此應用程式的電池優化。</string>
+    <string name="ignore_battery_optimization">忽略電池優化</string>
+    <string name="dismiss">忽略</string>
 </resources>
