--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -201,7 +201,7 @@
     <string name="use_relative_date_time">Relatieve datum/tijd</string>
     <string name="invalid_amount">Het bedrag moet een getal bevatten om de medicijnvoorraad-tracking voor deze herinnering in te schakelen.</string>
     <string name="sticky_on_lockscreen">Aanhoudende herinneringen op het vergrendelscherm</string>
-    <string name="sticky_on_lockscreen_summary">Herinneringen kunnen niet worden verwijderd vanaf het vergrendelscherm, alleen vanuit de meldingenlade</string>
+    <string name="sticky_on_lockscreen_summary">Herinneringen kunnen niet worden genegeerd vanaf het vergrendelscherm, alleen vanuit de notificatielade\nOpmerking: sommige smartwatches tonen mogelijk geen meldingen meer</string>
     <string name="big_notifications">Grote meldingsknoppen</string>
     <string name="please_wait">Even geduld…</string>
     <string name="interval_time">Interval %s</string>
