--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -208,7 +208,7 @@
     <string name="use_relative_date_time">Относительная дата/время</string>
     <string name="invalid_amount">Сумма должна содержать число, чтобы включить отслеживание запасов лекарств для этого напоминания.</string>
     <string name="sticky_on_lockscreen">Постоянные напоминания на экране блокировки</string>
-    <string name="sticky_on_lockscreen_summary">Напоминания нельзя отменить на экране блокировки, только в ящике уведомлений</string>
+    <string name="sticky_on_lockscreen_summary">Напоминания нельзя скрыть с экрана блокировки, только из панели уведомлений\nПримечание. Некоторые умные часы могут больше не показывать уведомления</string>
     <string name="big_notifications">Большие кнопки уведомлений</string>
     <string name="please_wait">Пожалуйста, подождите…</string>
     <string name="interval_time">Интервал %s</string>
