--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -201,7 +201,7 @@
     <string name="use_relative_date_time">ஒப்பீட்டு தேதி/நேரம்</string>
     <string name="invalid_amount">இந்த நினைவூட்டலுக்கான மருந்து கையிருப்பு கண்காணிப்பை இயக்க தொகை ஒரு எண்ணைக் கொண்டிருக்க வேண்டும்.</string>
     <string name="sticky_on_lockscreen">பூட்டுத் திரையில் நிலையான நினைவூட்டல்கள்</string>
-    <string name="sticky_on_lockscreen_summary">நினைவூட்டல்களை பூட்டுத் திரையில் இருந்து நீக்க முடியாது, அறிவிப்புகள் இழுப்பறையில் இருந்து மட்டுமே நீக்க முடியும்</string>
+    <string name="sticky_on_lockscreen_summary">நினைவூட்டல்களை பூட்டுத் திரையில் இருந்து தள்ளுபடி செய்ய முடியாது, அறிவிப்பு டிராயரில் இருந்து மட்டுமே தள்ளுபடி செய்ய முடியும்\nகுறிப்பு: சில ஸ்மார்ட்வாட்ச்கள் இனி அறிவிப்புகளைக் காட்டாது</string>
     <string name="big_notifications">பெரிய அறிவிப்பு பொத்தான்கள்</string>
     <string name="please_wait">தயவுசெய்து காத்திருக்கவும்…</string>
     <string name="interval_time">இடைவெளி %s</string>
