--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -201,7 +201,7 @@
     <string name="use_relative_date_time">Göreceli tarih/saat</string>
     <string name="invalid_amount">Bu hatırlatıcı için ilaç stok takibini etkinleştirmek için miktar bir sayı içermelidir.</string>
     <string name="sticky_on_lockscreen">Kilit ekranında kalıcı hatırlatıcılar</string>
-    <string name="sticky_on_lockscreen_summary">Hatırlatıcılar kilit ekranından kapatılamaz, sadece bildirim çekmecesinden kapatılabilir</string>
+    <string name="sticky_on_lockscreen_summary">Hatırlatıcılar kilit ekranından kapatılamaz, yalnızca bildirim çekmecesinden kapatılabilir\nNot: Bazı akıllı saatler artık bildirimleri göstermeyebilir</string>
     <string name="big_notifications">Büyük bildirim düğmeleri</string>
     <string name="please_wait">Lütfen bekleyin…</string>
     <string name="interval_time">Aralık %s</string>
