--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -211,7 +211,7 @@
     <string name="use_relative_date_time">Відносна дата/час</string>
     <string name="invalid_amount">Сума повинна містити число, щоб увімкнути відстеження запасів ліків для цього нагадування.</string>
     <string name="sticky_on_lockscreen">Постійні нагадування на екрані блокування</string>
-    <string name="sticky_on_lockscreen_summary">Нагадування не можна відкинути з екрана блокування, тільки зі скриньки сповіщень</string>
+    <string name="sticky_on_lockscreen_summary">Нагадування не можна прибрати з екрана блокування, лише з панелі сповіщень\nПримітка. Деякі розумні годинники можуть більше не показувати сповіщення</string>
     <string name="big_notifications">Великі кнопки сповіщень</string>
     <string name="please_wait">Будь ласка, зачекайте…</string>
     <string name="interval_time">Інтервал %s</string>
