--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -253,4 +253,5 @@
     <string name="battery_optimization_warning_summary">Ако имате проблеми с пропуснати известия, моля, деактивирайте оптимизацията на батерията за това приложение в настройките за известия.</string>
     <string name="ignore_battery_optimization">Игнориране на оптимизацията на батерията</string>
     <string name="dismiss">Отхвърляне</string>
+    <string name="reschedule_reminder">Пренасрочване на напомнянето</string>
 </resources>
