--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -253,4 +253,5 @@
     <string name="battery_optimization_warning_summary">Wenn Sie Probleme mit verpassten Benachrichtigungen haben, deaktivieren Sie bitte die Batterieoptimierung für diese App in den Benachrichtigungseinstellungen.</string>
     <string name="ignore_battery_optimization">Batterieoptimierung ignorieren</string>
     <string name="dismiss">Verwerfen</string>
+    <string name="reschedule_reminder">Erinnerung verschieben</string>
 </resources>
