--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -248,4 +248,5 @@
     <string name="battery_optimization_warning_summary">如果您遇到通知遺失的問題，請在通知設定中停用此應用程式的電池優化。</string>
     <string name="ignore_battery_optimization">忽略電池優化</string>
     <string name="dismiss">忽略</string>
+    <string name="reschedule_reminder">重新安排提醒</string>
 </resources>
