--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Ayarlar</string>
     <string name="tab_overview">Genel Bakış</string>
@@ -253,4 +253,4 @@
     <string name="battery_optimization_warning_summary">Cevapsız bildirimlerle ilgili sorunlar yaşıyorsanız, lütfen bildirim ayarlarından bu uygulama için pil optimizasyonunu devre dışı bırakın.</string>
     <string name="ignore_battery_optimization">Pil optimizasyonunu yoksay</string>
     <string name="reschedule_reminder">Hatırlatıcıyı yeniden planla</string>
-</resources>
+<string name="interval_start_condition">Aralık başlangıç koşulu</string></resources>
