--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="tab_settings">Einstellungen</string>
     <string name="tab_overview">Übersicht</string>
@@ -253,4 +253,4 @@
     <string name="battery_optimization_warning_summary">Falls Sie Probleme mit verpassten Benachrichtigungen haben, können Sie die Batterieoptimierung für diese App in den Benachrichtigungseinstellungen deaktivieren.</string>
     <string name="ignore_battery_optimization">Batterieoptimierung ignorieren</string>
     <string name="reschedule_reminder">Erinnerung verschieben</string>
-</resources>
+<string name="interval_start_condition">Intervallstartbedingung</string></resources>
