--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources xmlns:ns0="http://schemas.android.com/tools">
     <string name="tab_settings">Настройки</string>
     <string name="tab_overview">Обзор</string>
@@ -260,4 +260,4 @@
     <string name="battery_optimization_warning_summary">Если у вас возникли проблемы с пропущенными уведомлениями, пожалуйста, отключите оптимизацию батареи для этого приложения в настройках уведомлений.</string>
     <string name="ignore_battery_optimization">Игнорировать оптимизацию батареи</string>
     <string name="reschedule_reminder">Перенести напоминание</string>
-</resources>
+<string name="interval_start_condition">Условие запуска интервала</string></resources>
