--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="are_you_sure_delete_reminder">Är du säker på att du vill ta bort påminnelsen?</string>
     <string name="app_version">Appversion</string>
@@ -253,4 +253,4 @@
     <string name="battery_optimization_warning_summary">Om du upplever problem med missade aviseringar, inaktivera batterioptimering för den här appen i aviseringsinställningarna.</string>
     <string name="ignore_battery_optimization">Ignorera batterioptimering</string>
     <string name="reschedule_reminder">Schemalägg om påminnelsen</string>
-</resources>
+<string name="interval_start_condition">Intervallets startvillkor</string></resources>
