--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
     <string name="restore_start">இது அனைத்து மருந்து அமைப்புகள் மற்றும்/அல்லது நினைவூட்டல் நிகழ்வுகளை மாற்றும்.\n\n தொடரவா?</string>
     <string name="log_additional_dose">கூடுதல் டோச் பதிவு</string>
@@ -253,4 +253,5 @@
     <string name="battery_optimization_warning_summary">தவறவிட்ட அறிவிப்புகளில் சிக்கல்கள் ஏற்பட்டால், அறிவிப்பு அமைப்புகளில் இந்த செயலிக்கான பேட்டரி மேம்படுத்தலை முடக்கவும்.</string>
     <string name="ignore_battery_optimization">பேட்டரி உகப்பாக்கத்தைப் புறக்கணிக்கவும்</string>
     <string name="reschedule_reminder">நினைவூட்டலை மீண்டும் திட்டமிடுங்கள்</string>
+    <string name="interval_start_condition">இடைவெளி தொடக்க நிலை</string>
 </resources>
